[package]
name = "image-go-fast"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ImageGoNord but fast"

[dependencies]
gumdrop = "0.8.1"
hex = "0.4.3"
image = "0.24.2"
rayon = "1.5.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
